--- a/Python/resources/config_file.ini
+++ b/Python/resources/config_file.ini
@@ -1,8 +1,8 @@
 [database]
 user = postgres
-password = SecurePass123!
-host = manish-aman.cs1usuwgeztd.us-east-1.rds.amazonaws.com
-port = 5432
-database = tech
-schema = dev_aman
+password = 
+host = 
+port = 
+database = 
+schema = 
 db_type = postgresql
